--- a/smart-roomba-android/app/src/main/res/layout/fragment_drive_roomba.xml
+++ b/smart-roomba-android/app/src/main/res/layout/fragment_drive_roomba.xml
@@ -1,44 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
+    android:orientation="vertical"
     tools:context=".DriveRoombaFragment">
 
-    <Button
-        android:id="@+id/button_up"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:src="@drawable/ic_arrow_upward_black_24dp" />
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:rotation="45">
 
-    <Button
-        android:id="@+id/button_down"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:src="@drawable/ic_arrow_downward_black_24dp" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-    <Button
-        android:id="@+id/button_left"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:src="@drawable/ic_rotate_left_black_24dp" />
+            <ImageButton
+                android:id="@+id/button_up"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:contentDescription="@string/drive_forwards"
+                android:src="@drawable/ic_arrow_upward_black_45dp" />
 
-    <Button
-        android:id="@+id/button_right"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:src="@drawable/ic_rotate_right_black_24dp" />
+            <ImageButton
+                android:id="@+id/button_right"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:contentDescription="@string/rotate_right"
+                android:src="@drawable/ic_rotate_right_black_45dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <ImageButton
+                android:id="@+id/button_left"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:contentDescription="@string/rotate_left"
+                android:src="@drawable/ic_rotate_left_black_45dp" />
+
+            <ImageButton
+                android:id="@+id/button_down"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:contentDescription="@string/drive_backwards"
+                android:src="@drawable/ic_arrow_downward_black_45dp" />
+        </LinearLayout>
+
+    </LinearLayout>
 
     <Button
         android:id="@+id/button_record_start_stop"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_fiber_manual_record_red_24dp" />
+        android:layout_height="50dp"
+        android:drawableStart="@drawable/ic_fiber_manual_record_red_24dp"
+        android:text="@string/record" />
 
     <Button
         android:id="@+id/button_record_list"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_format_list_bulleted_black_24dp" />
+        android:layout_height="50dp"
+        android:drawableStart="@drawable/ic_format_list_bulleted_black_24dp"
+        android:text="@string/recorded_paths" />
 
-</FrameLayout>
+</LinearLayout>
