--- a/smart-roomba-android/app/src/main/res/layout/fragment_drive_roomba.xml
+++ b/smart-roomba-android/app/src/main/res/layout/fragment_drive_roomba.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
+    android:gravity="center_horizontal"
     android:orientation="vertical"
     tools:context=".DriveRoombaFragment">
 
@@ -11,7 +11,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:rotation="45">
+        android:rotation="45"
+        android:layout_margin="75dp">
 
         <LinearLayout
             android:layout_width="wrap_content"
